fix: Fix Menu Show Delay toggle detection and update localization
Change MenuShowDelay registry values from int to string to match ValueType (RegistryValueKind.String), fixing the toggle always showing OFF. Update Name and Description across all 25 localization files with ms values and Windows default info.

Fixes #399

--- a/src/Winhance.UI/Features/Common/Localization/ar.json
+++ b/src/Winhance.UI/Features/Common/Localization/ar.json
@@ -570,8 +570,8 @@
     "Setting_gaming-performance-explorer-search_Description": "البحث في نظام الملفات بالكامل بدلًا من المواقع المفهرسة فقط. يوفر نتائج أكثر اكتمالًا ولكنه أبطأ بكثير من البحث المفهرس ويزيد من نشاط القرص",
     "Setting_gaming-performance-wallpaper-compression_Name": "السماح بضغط خلفية سطح المكتب",
     "Setting_gaming-performance-wallpaper-compression_Description": "السماح لـ Windows بضغط الخلفيات لتوفير مساحة القرص وتحسين الأداء. يؤثر فقط على صور JPEG.",
-    "Setting_gaming-performance-explorer-menu-show-delay_Name": "تمكين تأخير إظهار القوائم",
-    "Setting_gaming-performance-explorer-menu-show-delay_Description": "إضافة تأخير بسيط قبل عرض القوائم، أو عرضها فورًا لتسريع التنقل",
+    "Setting_gaming-performance-explorer-menu-show-delay_Name": "تأخير إظهار القوائم",
+    "Setting_gaming-performance-explorer-menu-show-delay_Description": "إضافة تأخير بسيط قبل عرض القوائم (400ms - الافتراضي في Windows)، أو عرضها فورًا (0ms) لتسريع التنقل",
     "Setting_gaming-explorer-alt-tab-filter_Name": "عامل تصفية Alt+Tab",
     "Setting_gaming-explorer-alt-tab-filter_Description": "إظهار نوافذ التطبيقات التقليدية فقط في Alt+Tab بدلًا من تضمين علامات تبويب Microsoft Edge واقتراحات Windows الأخرى",
     "Setting_gaming-win32-priority_Name": "ضبط المعالج لأفضل أداء لـ",
