--- a/src/Winhance.UI/Features/Common/Localization/de.json
+++ b/src/Winhance.UI/Features/Common/Localization/de.json
@@ -584,8 +584,8 @@
   "Setting_gaming-performance-explorer-search_Description": "Durchsuchen Sie Ihr gesamtes Dateisystem anstelle von nur indizierten Orten. Dies liefert vollständigere Ergebnisse, ist aber deutlich langsamer als die indizierte Suche und erhöht die Festplattenaktivität",
   "Setting_gaming-performance-wallpaper-compression_Name": "Desktophintergrundkomprimierung zulassen",
   "Setting_gaming-performance-wallpaper-compression_Description": "Windows erlauben, Hintergrundbilder zu komprimieren, um Speicherplatz zu sparen und die Leistung zu verbessern. Betrifft nur Bilder im JPEG-Format.",
-  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Menüanzeigeverzögerung aktivieren",
-  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Fügen Sie eine kurze Verzögerung hinzu, bevor Menüs angezeigt werden, oder zeigen Sie sie sofort an, um die Navigation zu beschleunigen",
+  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Menüanzeigeverzögerung",
+  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Fügen Sie eine kurze Verzögerung hinzu, bevor Menüs angezeigt werden (400ms - Windows-Standard), oder zeigen Sie sie sofort an (0ms), um die Navigation zu beschleunigen",
   "Setting_gaming-explorer-alt-tab-filter_Name": "Alt+Tab-Filter",
   "Setting_gaming-explorer-alt-tab-filter_Description": "Nur traditionell geöffnete Fenster in Alt+Tab anzeigen, anstatt Microsoft Edge-Registerkarten und andere Windows-Vorschläge einzubeziehen",
   "Setting_gaming-win32-priority_Name": "Prozessor für beste Leistung anpassen von",
