--- a/src/Winhance.UI/Features/Common/Localization/el.json
+++ b/src/Winhance.UI/Features/Common/Localization/el.json
@@ -584,8 +584,8 @@
   "Setting_gaming-performance-explorer-search_Description": "Αναζήτηση σε ολόκληρο το σύστημα αρχείων αντί μόνο σε ευρετηριασμένες τοποθεσίες. Αυτό παρέχει πληρέστερα αποτελέσματα αλλά είναι σημαντικά πιο αργό από την ευρετηριασμένη αναζήτηση και αυξάνει τη δραστηριότητα του δίσκου",
   "Setting_gaming-performance-wallpaper-compression_Name": "Να επιτρέπεται η Συμπίεση Ταπετσαρίας Επιφάνειας Εργασίας",
   "Setting_gaming-performance-wallpaper-compression_Description": "Να επιτρέπεται στα Windows η συμπίεση ταπετσαριών για εξοικονόμηση χώρου στο δίσκο και βελτίωση της απόδοσης. Επηρεάζει μόνο εικόνες σε μορφή JPEG.",
-  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Ενεργοποίηση Καθυστέρησης Εμφάνισης Μενού",
-  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Προσθήκη σύντομης καθυστέρησης πριν την εμφάνιση μενού, ή άμεση εμφάνισή τους για γρηγορότερη πλοήγηση",
+  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Καθυστέρηση Εμφάνισης Μενού",
+  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Προσθήκη σύντομης καθυστέρησης πριν την εμφάνιση μενού (400ms - προεπιλογή Windows), ή άμεση εμφάνισή τους (0ms) για γρηγορότερη πλοήγηση",
   "Setting_gaming-explorer-alt-tab-filter_Name": "Φίλτρο Alt+Tab",
   "Setting_gaming-explorer-alt-tab-filter_Description": "Εμφάνιση μόνο παραδοσιακών ανοιχτών παραθύρων στο Alt+Tab αντί συμπερίληψης καρτελών Microsoft Edge και άλλων προτάσεων των Windows",
   "Setting_gaming-win32-priority_Name": "Προσαρμογή επεξεργαστή για βέλτιστη απόδοση του",
