--- a/src/Winhance.UI/Features/Common/Localization/en.json
+++ b/src/Winhance.UI/Features/Common/Localization/en.json
@@ -619,8 +619,8 @@
   "Setting_gaming-performance-explorer-search_Description": "Search your entire file system instead of only indexed locations. This provides more complete results but is significantly slower than indexed search and increases disk activity",
   "Setting_gaming-performance-wallpaper-compression_Name": "Allow Desktop Wallpaper Compression",
   "Setting_gaming-performance-wallpaper-compression_Description": "Allow Windows to compress wallpapers to save disk space and improve performance. Only affects images in JPEG format.",
-  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Enable Menu Show Delay",
-  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Add a brief delay before displaying menus, or show them instantly for faster navigation",
+  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Menu Show Delay",
+  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Add a brief delay before displaying menus (400ms - Windows default), or show them instantly (0ms) for faster navigation",
   "Setting_gaming-explorer-alt-tab-filter_Name": "Alt+Tab Filter",
   "Setting_gaming-explorer-alt-tab-filter_Description": "Show only traditional open windows in Alt+Tab instead of including Microsoft Edge tabs and other Windows suggestions",
   "Setting_gaming-win32-priority_Name": "Adjust processor for best performance of",
