--- a/src/Winhance.UI/Features/Common/Localization/es.json
+++ b/src/Winhance.UI/Features/Common/Localization/es.json
@@ -584,8 +584,8 @@
   "Setting_gaming-performance-explorer-search_Description": "Busca en todo tu sistema de archivos en lugar de solo en ubicaciones indexadas. Esto proporciona resultados más completos, pero es significativamente más lento que la búsqueda indexada y aumenta la actividad del disco",
   "Setting_gaming-performance-wallpaper-compression_Name": "Permitir la compresión del fondo de escritorio",
   "Setting_gaming-performance-wallpaper-compression_Description": "Permite que Windows comprima los fondos de pantalla para ahorrar espacio en disco y mejorar el rendimiento. Solo afecta a las imágenes en formato JPEG.",
-  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Habilitar retraso de visualización del menú",
-  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Añade un breve retraso antes de mostrar los menús, o muéstralos instantáneamente para una navegación más rápida",
+  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Retraso de visualización del menú",
+  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Añade un breve retraso antes de mostrar los menús (400ms - predeterminado de Windows), o muéstralos instantáneamente (0ms) para una navegación más rápida",
   "Setting_gaming-explorer-alt-tab-filter_Name": "Filtro Alt+Tab",
   "Setting_gaming-explorer-alt-tab-filter_Description": "Muestra solo ventanas abiertas tradicionales en Alt+Tab en lugar de incluir pestañas de Microsoft Edge y otras sugerencias de Windows",
   "Setting_gaming-win32-priority_Name": "Ajustar procesador para el mejor rendimiento de",
