--- a/src/Winhance.UI/Features/Common/Localization/fr.json
+++ b/src/Winhance.UI/Features/Common/Localization/fr.json
@@ -584,8 +584,8 @@
   "Setting_gaming-performance-explorer-search_Description": "Recherchez dans l'ensemble de votre système de fichiers au lieu des emplacements indexés uniquement. Cela fournit des résultats plus complets mais est nettement plus lent que la recherche indexée et augmente l'activité du disque",
   "Setting_gaming-performance-wallpaper-compression_Name": "Autoriser la compression du papier peint du bureau",
   "Setting_gaming-performance-wallpaper-compression_Description": "Autoriser Windows à compresser les fonds d'écran pour économiser de l'espace disque et améliorer les performances. N'affecte que les images au format JPEG.",
-  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Activer le délai d'affichage du menu",
-  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Ajoutez un bref délai avant d'afficher les menus, ou affichez-les instantanément pour une navigation plus rapide",
+  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Délai d'affichage du menu",
+  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Ajoutez un bref délai avant d'afficher les menus (400ms - par défaut Windows), ou affichez-les instantanément (0ms) pour une navigation plus rapide",
   "Setting_gaming-explorer-alt-tab-filter_Name": "Filtre Alt+Tab",
   "Setting_gaming-explorer-alt-tab-filter_Description": "N'afficher que les fenêtres ouvertes traditionnelles dans Alt+Tab au lieu d'inclure les onglets Microsoft Edge et d'autres suggestions Windows",
   "Setting_gaming-win32-priority_Name": "Ajuster le processeur pour de meilleures performances de",
