--- a/src/Winhance.UI/Features/Common/Localization/hi.json
+++ b/src/Winhance.UI/Features/Common/Localization/hi.json
@@ -584,8 +584,8 @@
   "Setting_gaming-performance-explorer-search_Description": "केवल अनुक्रमित स्थानों के बजाय अपनी पूरी फ़ाइल प्रणाली खोजें। यह अधिक संपूर्ण परिणाम प्रदान करता है लेकिन अनुक्रमित खोज से काफी धीमा है और डिस्क गतिविधि को बढ़ाता है",
   "Setting_gaming-performance-wallpaper-compression_Name": "डेस्कटॉप वॉलपेपर संपीड़न की अनुमति दें",
   "Setting_gaming-performance-wallpaper-compression_Description": "डिस्क स्थान बचाने और प्रदर्शन में सुधार करने के लिए विंडोज को वॉलपेपर संपीड़ित करने की अनुमति दें। केवल जेपीईजी प्रारूप में छवियों को प्रभावित करता है।",
-  "Setting_gaming-performance-explorer-menu-show-delay_Name": "मेनू दिखाने में देरी सक्षम करें",
-  "Setting_gaming-performance-explorer-menu-show-delay_Description": "मेनू प्रदर्शित करने से पहले एक संक्षिप्त देरी जोड़ें, या तेजी से नेविगेशन के लिए उन्हें तुरंत दिखाएं",
+  "Setting_gaming-performance-explorer-menu-show-delay_Name": "मेनू दिखाने में देरी",
+  "Setting_gaming-performance-explorer-menu-show-delay_Description": "मेनू प्रदर्शित करने से पहले एक संक्षिप्त देरी जोड़ें (400ms - Windows डिफ़ॉल्ट), या तेजी से नेविगेशन के लिए उन्हें तुरंत दिखाएं (0ms)",
   "Setting_gaming-explorer-alt-tab-filter_Name": "Alt+Tab फ़िल्टर",
   "Setting_gaming-explorer-alt-tab-filter_Description": "माइक्रोसॉफ्ट एज टैब और अन्य विंडोज सुझावों को शामिल करने के बजाय Alt+Tab में केवल पारंपरिक खुली खिड़कियां दिखाएं",
   "Setting_gaming-win32-priority_Name": "के सर्वश्रेष्ठ प्रदर्शन के लिए प्रोसेसर समायोजित करें",
