--- a/src/Winhance.UI/Features/Common/Localization/hu.json
+++ b/src/Winhance.UI/Features/Common/Localization/hu.json
@@ -584,8 +584,8 @@
   "Setting_gaming-performance-explorer-search_Description": "A teljes fájlrendszerben kereshet, ne csak az indexelt helyeken. Ez teljesebb eredményeket biztosít, de jelentősen lassabb, mint az indexelt keresés, és növeli a lemez terhelését.",
   "Setting_gaming-performance-wallpaper-compression_Name": "Asztali háttérkép tömörítés engedélyezése",
   "Setting_gaming-performance-wallpaper-compression_Description": "Engedélyezze a Windows számára a háttérképek tömörítését a lemezterület megtakarítása és a teljesítmény javítása érdekében. Csak a JPEG formátumú képekre vonatkozik.",
-  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Menü megjelenítési késleltetés engedélyezése",
-  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Rövid késleltetés hozzáadása a menük megjelenítése előtt, vagy azonnali megjelenítés a gyorsabb navigáció érdekében",
+  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Menü megjelenítési késleltetés",
+  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Rövid késleltetés hozzáadása a menük megjelenítése előtt (400ms - Windows alapértelmezés), vagy azonnali megjelenítés (0ms) a gyorsabb navigáció érdekében",
   "Setting_gaming-explorer-alt-tab-filter_Name": "Alt+Tab szűrő",
   "Setting_gaming-explorer-alt-tab-filter_Description": "Csak a hagyományos megnyitott ablakok megjelenítése az Alt+Tab billentyűkombinációban a Microsoft Edge fülek és egyéb Windows-javaslatok megjelenítése helyett",
   "Setting_gaming-win32-priority_Name": "Állítsa be a processzort a legjobb teljesítmény érdekében",
