--- a/src/Winhance.UI/Features/Common/Localization/it.json
+++ b/src/Winhance.UI/Features/Common/Localization/it.json
@@ -584,8 +584,8 @@
   "Setting_gaming-performance-explorer-search_Description": "Cerca in tutto il file system invece che solo nelle posizioni indicizzate. Ciò fornisce risultati più completi ma è notevolmente più lento della ricerca indicizzata e aumenta l'attività del disco",
   "Setting_gaming-performance-wallpaper-compression_Name": "Consenti la compressione dello sfondo del desktop",
   "Setting_gaming-performance-wallpaper-compression_Description": "Consenti a Windows di comprimere gli sfondi per risparmiare spazio su disco e migliorare le prestazioni. Influisce solo sulle immagini in formato JPEG.",
-  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Abilita ritardo visualizzazione menu",
-  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Aggiungi un breve ritardo prima di visualizzare i menu o mostrali istantaneamente per una navigazione più veloce",
+  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Ritardo visualizzazione menu",
+  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Aggiungi un breve ritardo prima di visualizzare i menu (400ms - predefinito Windows), o mostrali istantaneamente (0ms) per una navigazione più veloce",
   "Setting_gaming-explorer-alt-tab-filter_Name": "Filtro Alt+Tab",
   "Setting_gaming-explorer-alt-tab-filter_Description": "Mostra solo le finestre aperte tradizionali in Alt+Tab invece di includere le schede di Microsoft Edge e altri suggerimenti di Windows",
   "Setting_gaming-win32-priority_Name": "Regola il processore per le migliori prestazioni di",
