--- a/src/Winhance.UI/Features/Common/Localization/ja.json
+++ b/src/Winhance.UI/Features/Common/Localization/ja.json
@@ -584,8 +584,8 @@
   "Setting_gaming-performance-explorer-search_Description": "インデックス付きの場所だけでなく、ファイルシステム全体を検索します。これにより、より完全な結果が得られますが、インデックス付き検索よりも大幅に遅くなり、ディスクアクティビティが増加します。",
   "Setting_gaming-performance-wallpaper-compression_Name": "デスクトップ壁紙の圧縮を許可",
   "Setting_gaming-performance-wallpaper-compression_Description": "Windowsが壁紙を圧縮してディスク領域を節約し、パフォーマンスを向上させることを許可します。JPEG形式の画像にのみ影響します。",
-  "Setting_gaming-performance-explorer-menu-show-delay_Name": "メニュー表示遅延を有効にする",
-  "Setting_gaming-performance-explorer-menu-show-delay_Description": "メニューを表示する前に短い遅延を追加するか、より高速なナビゲーションのために即座に表示します。",
+  "Setting_gaming-performance-explorer-menu-show-delay_Name": "メニュー表示遅延",
+  "Setting_gaming-performance-explorer-menu-show-delay_Description": "メニューを表示する前に短い遅延を追加する（400ms - Windows既定値）か、より高速なナビゲーションのために即座に表示します（0ms）",
   "Setting_gaming-explorer-alt-tab-filter_Name": "Alt+Tabフィルター",
   "Setting_gaming-explorer-alt-tab-filter_Description": "Microsoft Edgeタブやその他のWindowsの提案を含めずに、Alt+Tabで従来の開いているウィンドウのみを表示します。",
   "Setting_gaming-win32-priority_Name": "最高のパフォーマンスを得るためにプロセッサを調整する対象",
