--- a/src/Winhance.UI/Features/Common/Localization/lt.json
+++ b/src/Winhance.UI/Features/Common/Localization/lt.json
@@ -584,8 +584,8 @@
   "Setting_gaming-performance-explorer-search_Description": "Ieškoti visoje failų sistemoje vietoj tik indeksuotų vietų. Tai suteikia išsamesnius rezultatus, bet yra žymiai lėtesnis nei indeksuota paieška ir padidina disko aktyvumą",
   "Setting_gaming-performance-wallpaper-compression_Name": "Leisti darbalaukio fono paveikslėlių suspaudimą",
   "Setting_gaming-performance-wallpaper-compression_Description": "Leisti Windows suspausti fono paveikslėlius, kad būtų sutaupyta disko vietos ir pagerintas našumas. Paveikia tik JPEG formato vaizdus.",
-  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Įjungti meniu rodymo delsą",
-  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Pridėti trumpą delsą prieš rodant meniu arba rodyti juos akimirksniu greitesniam naršymui",
+  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Meniu rodymo delsa",
+  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Pridėti trumpą delsą prieš rodant meniu (400ms - numatytoji Windows reikšmė) arba rodyti juos akimirksniu (0ms) greitesniam naršymui",
   "Setting_gaming-explorer-alt-tab-filter_Name": "Alt+Tab filtras",
   "Setting_gaming-explorer-alt-tab-filter_Description": "Rodyti tik tradicinius atidarytus langus Alt+Tab, o ne įtraukti Microsoft Edge skirtukų ir kitų Windows pasiūlymų",
   "Setting_gaming-win32-priority_Name": "Reguliuoti procesorių geriausiam našumui",
