--- a/src/Winhance.UI/Features/Common/Localization/lv.json
+++ b/src/Winhance.UI/Features/Common/Localization/lv.json
@@ -584,8 +584,8 @@
   "Setting_gaming-performance-explorer-search_Description": "Meklēt visā failu sistēmā, nevis tikai indeksētās vietās. Tas nodrošina pilnīgākus rezultātus, bet ir ievērojami lēnāks par indeksētu meklēšanu un palielina diska aktivitāti",
   "Setting_gaming-performance-wallpaper-compression_Name": "Atļaut darbvirsmas fona attēlu saspiešanu",
   "Setting_gaming-performance-wallpaper-compression_Description": "Atļaut Windows saspiest fona attēlus, lai ietaupītu diska vietu un uzlabotu veiktspēju. Ietekmē tikai attēlus JPEG formātā.",
-  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Iespējot izvēlnes parādīšanas aizkavi",
-  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Pievienot nelielu aizkavi pirms izvēlņu parādīšanas vai parādīt tās uzreiz ātrākai navigācijai",
+  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Izvēlnes parādīšanas aizkave",
+  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Pievienot nelielu aizkavi pirms izvēlņu parādīšanas (400ms - Windows noklusējums) vai parādīt tās uzreiz (0ms) ātrākai navigācijai",
   "Setting_gaming-explorer-alt-tab-filter_Name": "Alt+Tab filtrs",
   "Setting_gaming-explorer-alt-tab-filter_Description": "Rādīt tikai tradicionālos atvērtos logus Alt+Tab, nevis iekļaut Microsoft Edge cilnes un citus Windows ieteikumus",
   "Setting_gaming-win32-priority_Name": "Pielāgot procesoru labākai veiktspējai",
