--- a/src/Winhance.UI/Features/Common/Localization/pt.json
+++ b/src/Winhance.UI/Features/Common/Localization/pt.json
@@ -584,8 +584,8 @@
   "Setting_gaming-performance-explorer-search_Description": "Pesquise em todo o seu sistema de ficheiros em vez de apenas em localizações indexadas. Isto fornece resultados mais completos, mas é significativamente mais lento do que a pesquisa indexada e aumenta a atividade do disco",
   "Setting_gaming-performance-wallpaper-compression_Name": "Permitir Compressão de Papel de Parede do Ambiente de Trabalho",
   "Setting_gaming-performance-wallpaper-compression_Description": "Permitir que o Windows comprima papéis de parede para poupar espaço em disco e melhorar o desempenho. Afeta apenas imagens em formato JPEG.",
-  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Ativar Atraso de Exibição de Menu",
-  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Adicionar um breve atraso antes de exibir menus, ou mostrá-los instantaneamente para uma navegação mais rápida",
+  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Atraso de Exibição de Menu",
+  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Adicionar um breve atraso antes de exibir menus (400ms - padrão do Windows), ou mostrá-los instantaneamente (0ms) para uma navegação mais rápida",
   "Setting_gaming-explorer-alt-tab-filter_Name": "Filtro Alt+Tab",
   "Setting_gaming-explorer-alt-tab-filter_Description": "Mostrar apenas janelas abertas tradicionais em Alt+Tab em vez de incluir separadores do Microsoft Edge e outras sugestões do Windows",
   "Setting_gaming-win32-priority_Name": "Ajustar processador para melhor desempenho de",
