--- a/src/Winhance.UI/Features/Common/Localization/ru.json
+++ b/src/Winhance.UI/Features/Common/Localization/ru.json
@@ -584,8 +584,8 @@
   "Setting_gaming-performance-explorer-search_Description": "Искать по всей файловой системе вместо только индексированных местоположений. Это дает более полные результаты, но значительно медленнее, чем индексированный поиск, и увеличивает активность диска",
   "Setting_gaming-performance-wallpaper-compression_Name": "Разрешить сжатие обоев рабочего стола",
   "Setting_gaming-performance-wallpaper-compression_Description": "Разрешить Windows сжимать обои для экономии дискового пространства и повышения производительности. Влияет только на изображения в формате JPEG.",
-  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Включить задержку отображения меню",
-  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Добавить короткую задержку перед отображением меню или показывать их мгновенно для более быстрой навигации",
+  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Задержка отображения меню",
+  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Добавить короткую задержку перед отображением меню (400ms - значение Windows по умолчанию) или показывать их мгновенно (0ms) для более быстрой навигации",
   "Setting_gaming-explorer-alt-tab-filter_Name": "Фильтр Alt+Tab",
   "Setting_gaming-explorer-alt-tab-filter_Description": "Показывать только традиционные открытые окна в Alt+Tab вместо включения вкладок Microsoft Edge и других предложений Windows",
   "Setting_gaming-win32-priority_Name": "Настроить процессор для лучшей производительности",
