--- a/src/Winhance.UI/Features/Common/Localization/sv.json
+++ b/src/Winhance.UI/Features/Common/Localization/sv.json
@@ -584,8 +584,8 @@
   "Setting_gaming-performance-explorer-search_Description": "Sök i hela ditt filsystem istället för endast indexerade platser. Detta ger mer kompletta resultat men är betydligt långsammare än indexerad sökning och ökar diskaktiviteten",
   "Setting_gaming-performance-wallpaper-compression_Name": "Tillåt komprimering av skrivbordsbakgrund",
   "Setting_gaming-performance-wallpaper-compression_Description": "Tillåt Windows att komprimera bakgrundsbilder för att spara diskutrymme och förbättra prestanda. Påverkar endast bilder i JPEG-format.",
-  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Aktivera fördröjning för menyvisning",
-  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Lägg till en kort fördröjning innan menyer visas, eller visa dem direkt för snabbare navigering",
+  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Fördröjning för menyvisning",
+  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Lägg till en kort fördröjning innan menyer visas (400ms - Windows-standard), eller visa dem direkt (0ms) för snabbare navigering",
   "Setting_gaming-explorer-alt-tab-filter_Name": "Alt+Tabb-filter",
   "Setting_gaming-explorer-alt-tab-filter_Description": "Visa endast traditionella öppna fönster i Alt+Tabb istället för att inkludera Microsoft Edge-flikar och andra Windows-förslag",
   "Setting_gaming-win32-priority_Name": "Justera processorn för bästa prestanda av",
