--- a/src/Winhance.UI/Features/Common/Localization/uk.json
+++ b/src/Winhance.UI/Features/Common/Localization/uk.json
@@ -584,8 +584,8 @@
   "Setting_gaming-performance-explorer-search_Description": "Шукати по всій файловій системі замість лише індексованих місць. Це забезпечує більш повні результати, але значно повільніше, ніж індексований пошук, і збільшує активність диска",
   "Setting_gaming-performance-wallpaper-compression_Name": "Дозволити стиснення шпалер робочого столу",
   "Setting_gaming-performance-wallpaper-compression_Description": "Дозволити Windows стискати шпалери для економії місця на диску та покращення продуктивності. Впливає лише на зображення у форматі JPEG.",
-  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Увімкнути затримку показу меню",
-  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Додати коротку затримку перед відображенням меню або показувати їх миттєво для швидшої навігації",
+  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Затримка показу меню",
+  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Додати коротку затримку перед відображенням меню (400ms - стандартне значення Windows) або показувати їх миттєво (0ms) для швидшої навігації",
   "Setting_gaming-explorer-alt-tab-filter_Name": "Фільтр Alt+Tab",
   "Setting_gaming-explorer-alt-tab-filter_Description": "Показувати лише традиційні відкриті вікна в Alt+Tab замість включення вкладок Microsoft Edge та інших пропозицій Windows",
   "Setting_gaming-win32-priority_Name": "Налаштувати процесор для найкращої продуктивності",
