--- a/src/Winhance.UI/Features/Common/Localization/vi.json
+++ b/src/Winhance.UI/Features/Common/Localization/vi.json
@@ -584,8 +584,8 @@
   "Setting_gaming-performance-explorer-search_Description": "Tìm kiếm toàn bộ hệ thống tệp của bạn thay vì chỉ các vị trí được lập chỉ mục. Điều này cung cấp kết quả đầy đủ hơn nhưng chậm hơn đáng kể so với tìm kiếm được lập chỉ mục và làm tăng hoạt động của đĩa",
   "Setting_gaming-performance-wallpaper-compression_Name": "Cho phép nén hình nền màn hình",
   "Setting_gaming-performance-wallpaper-compression_Description": "Cho phép Windows nén hình nền để tiết kiệm dung lượng đĩa và cải thiện hiệu suất. Chỉ ảnh hưởng đến hình ảnh ở định dạng JPEG.",
-  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Bật độ trễ hiển thị menu",
-  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Thêm một độ trễ ngắn trước khi hiển thị menu hoặc hiển thị chúng ngay lập tức để điều hướng nhanh hơn",
+  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Độ trễ hiển thị menu",
+  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Thêm một độ trễ ngắn trước khi hiển thị menu (400ms - mặc định Windows) hoặc hiển thị chúng ngay lập tức (0ms) để điều hướng nhanh hơn",
   "Setting_gaming-explorer-alt-tab-filter_Name": "Bộ lọc Alt+Tab",
   "Setting_gaming-explorer-alt-tab-filter_Description": "Chỉ hiển thị các cửa sổ đang mở truyền thống trong Alt+Tab thay vì bao gồm các tab Microsoft Edge và các đề xuất khác của Windows",
   "Setting_gaming-win32-priority_Name": "Điều chỉnh bộ xử lý để có hiệu suất tốt nhất của",
