--- a/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
@@ -584,8 +584,8 @@
   "Setting_gaming-performance-explorer-search_Description": "搜索整个文件系统，而不仅仅是索引位置。这提供了更完整的结果，但比索引搜索慢得多，并增加了磁盘活动",
   "Setting_gaming-performance-wallpaper-compression_Name": "允许桌面壁纸压缩",
   "Setting_gaming-performance-wallpaper-compression_Description": "允许 Windows 压缩壁纸以节省磁盘空间并提高性能。仅影响 JPEG 格式的图像。",
-  "Setting_gaming-performance-explorer-menu-show-delay_Name": "启用菜单显示延迟",
-  "Setting_gaming-performance-explorer-menu-show-delay_Description": "在显示菜单前添加短暂延迟，或立即显示以加快导航速度",
+  "Setting_gaming-performance-explorer-menu-show-delay_Name": "菜单显示延迟",
+  "Setting_gaming-performance-explorer-menu-show-delay_Description": "在显示菜单前添加短暂延迟（400ms - Windows 默认值），或立即显示（0ms）以加快导航速度",
   "Setting_gaming-explorer-alt-tab-filter_Name": "Alt+Tab 筛选器",
   "Setting_gaming-explorer-alt-tab-filter_Description": "在 Alt+Tab 中仅显示传统的打开窗口，而不是包括 Microsoft Edge 选项卡和其他 Windows 建议",
   "Setting_gaming-win32-priority_Name": "调整处理器以获得最佳性能",
