--- a/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
@@ -584,8 +584,8 @@
   "Setting_gaming-performance-explorer-search_Description": "搜尋整個檔案系統而不僅是索引位置。這能提供更完整的結果，但速度明顯較慢且會增加磁碟活動",
   "Setting_gaming-performance-wallpaper-compression_Name": "允許桌面桌布壓縮",
   "Setting_gaming-performance-wallpaper-compression_Description": "允許 Windows 壓縮桌布以節省磁碟空間並改善效能。僅影響 JPEG 格式的圖片。",
-  "Setting_gaming-performance-explorer-menu-show-delay_Name": "啟用選單顯示延遲",
-  "Setting_gaming-performance-explorer-menu-show-delay_Description": "在顯示選單前加入短暫延遲，或立即顯示以加快導覽速度",
+  "Setting_gaming-performance-explorer-menu-show-delay_Name": "選單顯示延遲",
+  "Setting_gaming-performance-explorer-menu-show-delay_Description": "在顯示選單前加入短暫延遲（400ms - Windows 預設值），或立即顯示（0ms）以加快導覽速度",
   "Setting_gaming-explorer-alt-tab-filter_Name": "Alt+Tab 過濾器",
   "Setting_gaming-explorer-alt-tab-filter_Description": "在 Alt+Tab 中僅顯示傳統開啟的視窗，而不包含 Microsoft Edge 分頁與其他 Windows 建議",
   "Setting_gaming-win32-priority_Name": "調整處理器以最佳化效能：",
