--- a/src/Winhance.UI/Features/Common/Localization/af.json
+++ b/src/Winhance.UI/Features/Common/Localization/af.json
@@ -584,8 +584,8 @@
   "Setting_gaming-performance-explorer-search_Description": "Soek jou hele lêerstelsel in plaas van slegs geïndekseerde liggings. Dit bied meer volledige resultate maar is aansienlik stadiger as geïndekseerde soek en verhoog skyfaktiwiteit",
   "Setting_gaming-performance-wallpaper-compression_Name": "Laat Lessenaar Muurpapier Kompressie Toe",
   "Setting_gaming-performance-wallpaper-compression_Description": "Laat Windows toe om muurpapiere saam te pers om skyfspasie te bespaar en verrigting te verbeter. Beïnvloed slegs beelde in JPEG formaat.",
-  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Aktiveer Kieslys Wys Vertraging",
-  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Voeg 'n kort vertraging by voordat kieslyste vertoon word, of wys hulle onmiddellik vir vinniger navigasie",
+  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Kieslys Wys Vertraging",
+  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Voeg 'n kort vertraging by voordat kieslyste vertoon word (400ms - Windows standaard), of wys hulle onmiddellik (0ms) vir vinniger navigasie",
   "Setting_gaming-explorer-alt-tab-filter_Name": "Alt+Tab Filter",
   "Setting_gaming-explorer-alt-tab-filter_Description": "Wys slegs tradisionele oop vensters in Alt+Tab in plaas van om Microsoft Edge oortjies en ander Windows voorstelle in te sluit",
   "Setting_gaming-win32-priority_Name": "Pas verwerker aan vir beste verrigting van",
@@ -606,7 +606,7 @@
   "Setting_gaming-directx-flip-model_Description": "Verminder vertraging en gebruik gevorderde funksies in versoenbare speletjies deur DirectX flip-aanbiedingsmodel te gebruik",
   "Setting_gaming-directx-vrr-optimizations_Name": "Veranderlike Verfriskwota (VRR)",
   "Setting_gaming-directx-vrr-optimizations_Description": "Aktiveer VRR (G-Sync/FreeSync) optimaliserings vir gladder spel. Vereis 'n VRR-versoenbare monitor; hierdie instelling het geen uitwerking as jou monitor nie VRR ondersteun nie",
-  "Setting_gaming-directx-auto-hdr_Name": "Outo HDR",
+  "Setting_gaming-directx-auto-hdr_Name": "Outomatiese HDR",
   "Setting_gaming-directx-auto-hdr_Description": "Skakel SDR-inhoud outomaties om na HDR vir verbeterde kleure en helderheid. Vereis 'n HDR-bekwame skerm met HDR geaktiveer; hierdie instelling het geen uitwerking as jou skerm nie HDR ondersteun nie",
   "Setting_gaming-nvidia-sharpening_Name": "Nalatenskap NVIDIA Verskerping",
   "Setting_gaming-nvidia-sharpening_Description": "Aktiveer nalatenskap NVIDIA beeldverskerpingsfilter vir verbeterde visuele helderheid. Werk slegs op ouer NVIDIA bestuurders; nuwer bestuurders moet NVIDIA Beheerpaneel verskerping gebruik",
