--- a/src/Winhance.UI/Features/Common/Localization/cs.json
+++ b/src/Winhance.UI/Features/Common/Localization/cs.json
@@ -584,8 +584,8 @@
   "Setting_gaming-performance-explorer-search_Description": "Prohledat celý souborový systém místo pouze indexovaných umístění. To poskytuje úplnější výsledky, ale je výrazně pomalejší než indexované vyhledávání a zvyšuje aktivitu disku",
   "Setting_gaming-performance-wallpaper-compression_Name": "Povolit kompresi tapet na ploše",
   "Setting_gaming-performance-wallpaper-compression_Description": "Povolit Windows komprimovat tapety, aby se ušetřilo místo na disku a zlepšil výkon. Ovlivňuje pouze obrázky ve formátu JPEG.",
-  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Povolit zpoždění zobrazení nabídky",
-  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Přidat krátké zpoždění před zobrazením nabídek nebo je zobrazit okamžitě pro rychlejší navigaci",
+  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Zpoždění zobrazení nabídky",
+  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Přidat krátké zpoždění před zobrazením nabídek (400ms - výchozí hodnota Windows), nebo je zobrazit okamžitě (0ms) pro rychlejší navigaci",
   "Setting_gaming-explorer-alt-tab-filter_Name": "Filtr Alt+Tab",
   "Setting_gaming-explorer-alt-tab-filter_Description": "Zobrazit pouze tradiční otevřená okna v Alt+Tab místo zahrnutí karet Microsoft Edge a dalších návrhů Windows",
   "Setting_gaming-win32-priority_Name": "Upravit procesor pro nejlepší výkon",
