--- a/src/Winhance.UI/Features/Common/Localization/nl-BE.json
+++ b/src/Winhance.UI/Features/Common/Localization/nl-BE.json
@@ -584,8 +584,8 @@
   "Setting_gaming-performance-explorer-search_Description": "Doorzoek uw gehele bestandssysteem in plaats van alleen geïndexeerde locaties. Dit geeft completere resultaten maar is aanzienlijk langzamer dan geïndexeerd zoeken en verhoogt schijfactiviteit",
   "Setting_gaming-performance-wallpaper-compression_Name": "Bureaubladachtergrondcompressie toestaan",
   "Setting_gaming-performance-wallpaper-compression_Description": "Sta Windows toe achtergronden te comprimeren om schijfruimte te besparen en prestaties te verbeteren. Heeft alleen invloed op afbeeldingen in JPEG-formaat.",
-  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Menuweergavevertraging inschakelen",
-  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Voeg een korte vertraging toe voordat menu\u0027s worden weergegeven, of toon ze direct voor snellere navigatie",
+  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Menuweergavevertraging",
+  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Voeg een korte vertraging toe voordat menu\u0027s worden weergegeven (400ms - Windows-standaard), of toon ze direct (0ms) voor snellere navigatie",
   "Setting_gaming-explorer-alt-tab-filter_Name": "Alt+Tab Filter",
   "Setting_gaming-explorer-alt-tab-filter_Description": "Toon alleen traditionele open vensters in Alt+Tab in plaats van Microsoft Edge-tabbladen en andere Windows-suggesties op te nemen",
   "Setting_gaming-win32-priority_Name": "Processor aanpassen voor beste prestaties van",
