--- a/src/Winhance.UI/Features/Common/Localization/pl.json
+++ b/src/Winhance.UI/Features/Common/Localization/pl.json
@@ -584,8 +584,8 @@
   "Setting_gaming-performance-explorer-search_Description": "Przeszukaj cały system plików zamiast tylko indeksowanych lokalizacji. Zapewnia to bardziej kompletne wyniki, ale jest znacznie wolniejsze niż wyszukiwanie indeksowane i zwiększa aktywność dysku",
   "Setting_gaming-performance-wallpaper-compression_Name": "Zezwalaj na kompresję tapety pulpitu",
   "Setting_gaming-performance-wallpaper-compression_Description": "Zezwalaj systemowi Windows na kompresowanie tapet w celu zaoszczędzenia miejsca na dysku i poprawy wydajności. Dotyczy tylko obrazów w formacie JPEG.",
-  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Włącz opóźnienie wyświetlania menu",
-  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Dodaj krótkie opóźnienie przed wyświetleniem menu lub wyświetl je natychmiast dla szybszej nawigacji",
+  "Setting_gaming-performance-explorer-menu-show-delay_Name": "Opóźnienie wyświetlania menu",
+  "Setting_gaming-performance-explorer-menu-show-delay_Description": "Dodaj krótkie opóźnienie przed wyświetleniem menu (400ms - domyślna wartość Windows) lub wyświetl je natychmiast (0ms) dla szybszej nawigacji",
   "Setting_gaming-explorer-alt-tab-filter_Name": "Filtr Alt+Tab",
   "Setting_gaming-explorer-alt-tab-filter_Description": "Pokazuj tylko tradycyjne otwarte okna w Alt+Tab, zamiast uwzględniać karty Microsoft Edge i inne sugestie systemu Windows",
   "Setting_gaming-win32-priority_Name": "Dostosuj procesor dla najlepszej wydajności",
