Update Hungarian localization for various settings
Localization of new strings.

--- a/src/Winhance.UI/Features/Common/Localization/hu.json
+++ b/src/Winhance.UI/Features/Common/Localization/hu.json
@@ -218,7 +218,7 @@
   "Setting_start-menu-clean-10_ConfirmMessage": "Arra készül, hogy megtisztítsa a Start menüt a számítógép összes felhasználója számára. Ezzel eltávolítja az összes rögzített elemet, és alkalmazza a javasolt elrendezést.\n\nSzeretné folytatni?",
   "Setting_start-menu-clean-10_ConfirmCheckbox": "Alkalmazzuk az ajánlott Start menü beállításokat is, hogy letiltsuk\n a javaslatokat, ajánlásokat és nyomkövetési funkciókat.",
   "Setting_start-menu-clean-11_Name": "Start menü tisztítása",
-  "Setting_start-menu-clean-11_Description": "Removes all pinned items and applies clean layout",
+  "Setting_start-menu-clean-11_Description": "Eltávolítja az összes rögzített elemet, és sima elrendezést alkalmaz",
   "Setting_start-menu-clean-11_ConfirmTitle": "Start menü tisztításának indítása",
   "Setting_start-menu-clean-11_ConfirmMessage": "Arra készül, hogy megtisztítsa a Start menüt a számítógép összes felhasználója számára. Ezzel eltávolítja az összes rögzített elemet, és alkalmazza a javasolt elrendezést.\n\nSzeretné folytatni?",
   "Setting_start-menu-clean-11_ConfirmCheckbox": "Alkalmazzuk az ajánlott Start menü beállításokat is, hogy letiltsuk\n a javaslatokat, ajánlásokat és nyomkövetési funkciókat.",
@@ -301,8 +301,8 @@
   "Setting_explorer-customization-shortcut-suffix_Name": "Az új parancsikonokból eltávolítja a „Parancsikon” utótagot",
   "Setting_explorer-customization-shortcut-suffix_Description": "Megakadályozza, hogy a Windows „Parancsikon” szöveget fűzzön az újonnan létrehozott parancsikonfájlok nevéhez",
   "Setting_explorer-customization-context-menu_Name": "Használja a klasszikus helyi menüt",
-  "Setting_explorer-customization-context-menu_Description": "Use the Windows 10-style right-click menu with all options visible instead of the simplified Windows 11 menu",
-  "Setting_explorer-take-ownership_Name": "Add 'Take Ownership' to Context Menu",
+  "Setting_explorer-customization-context-menu_Description": "Használja a Windows 10 stílusú jobb egérgombbal elérhető menüt, amelyben minden opció látható, a egyszerűsített Windows 11 menü helyett",
+  "Setting_explorer-take-ownership_Name": "A 'Tulajdonjog átvétele' hozzáadása a helyi menühöz",
   "Setting_explorer-take-ownership_Description": "Használja a Windows 10 stílusú jobbklikk menüt az összes opcióval látható formában a egyszerűsített Windows 11 menü helyett",
   "Setting_explorer-context-menu-toggle-extensions_Name": "Adja hozzá a „Kiterjesztések megjelenítése/elrejtése” lehetőséget a helyi menübe",
   "Setting_explorer-context-menu-toggle-extensions_Description": "Hozzáad egy jobbklikkes menüopciót a fájlkiterjesztések láthatóságának gyors váltásához a Fájlkezelőben (csak a Klasszikus Kontextusmenüben vagy a 'További lehetőségek megjelenítése' menüben látható Windows 11-ben)",
@@ -1360,11 +1360,11 @@
   "Progress_WinGet_UninstallationCancelled": "{0} eltávolítása megszakadt",
   "Progress_WinGet_UninstallationError": "Hiba történt a(z) {0} eltávolításakor: {1}",
   "Progress_WinGet_Installing": "A WinGet telepítése...",
-  "Progress_WinGet_CheckingExisting": "Checking for existing WinGet package...",
-  "Progress_WinGet_ProvisioningExisting": "Provisioning existing WinGet package...",
+  "Progress_WinGet_CheckingExisting": "Meglévő WinGet csomag ellenőrzése…",
+  "Progress_WinGet_ProvisioningExisting": "Meglévő WinGet csomag rendelkezésre állítása…",
   "Progress_WinGet_InstallFailed": "A WinGet telepítése sikertelen",
   "Progress_WinGet_VerifyingInstallation": "A WinGet telepítésének ellenőrzése...",
-  "Progress_WinGet_WaitingForRegistration": "Waiting for WinGet COM registration...",
+  "Progress_WinGet_WaitingForRegistration": "Várakozás a WinGet COM-regisztrációra…",
   "Progress_WinGet_VerificationFailed": "A WinGet telepítésének ellenőrzése sikertelen",
   "Progress_WinGet_InstalledSuccessfully": "A WinGet sikeresen telepítve",
   "Progress_WinGet_InstallError": "Hiba a WinGet telepítése közben: {0}",
@@ -1443,7 +1443,7 @@
   "Loading_CheckingScripts": "Szkriptfrissítések keresése...",
   "Loading_PreparingApp": "Alkalmazás előkészítése...",
   "Tooltip_Documentation": "Dokumentáció",
-  "Tooltip_ToggleNavigation": "Navig\u00E1ci\u00F3 v\u00E1lt\u00E1sa",
+  "Tooltip_ToggleNavigation": "Navigáció Be/Ki",
   "Dialog_ImportConfig_Option_Backup_Title": "Biztonsági mentés importálása",
   "Dialog_ImportConfig_Option_Backup_Description": "A rendszer biztonsági mentés konfigurációjának visszaállítása",
   "Dialog_ImportConfig_Option_Defaults_Title": "Windows alapértékek visszaállítása",
@@ -1496,26 +1496,26 @@
   "WIMUtil_Status_CreatingIso": "ISO létrehozása",
   "WIMUtil_Button_OpenFolder": "Mappa megnyitása",
   "Loading_CheckingSystemProtection": "Rendszervédelem ellenőrzése...",
-  "Dialog_Choco_ConsentTitle": "Install Chocolatey?",
-  "Dialog_Choco_ConsentMessage": "The installation for this app failed via WinGet. Winhance can try to install it using Chocolatey, a trusted third-party package manager.\n\nChocolatey will be installed on your system if it isn't already.\n\nWould you like to proceed?",
-  "Dialog_Choco_DontAskAgain": "Don't ask me again (always use Chocolatey as fallback)",
-  "Progress_Choco_Installing": "Installing Chocolatey package manager...",
-  "Progress_Choco_Installed": "Chocolatey installed successfully",
-  "Progress_Choco_InstallingPackage": "Installing '{0}' via Chocolatey...",
-  "Progress_Choco_FallbackAttempt": "WinGet failed, trying Chocolatey for '{0}'...",
+  "Dialog_Choco_ConsentTitle": "Telepíti a Chocolateyt?",
+  "Dialog_Choco_ConsentMessage": "Az alkalmazás telepítése nem sikerült a WinGet segítségével. A Winhance megpróbálhatja telepíteni a Chocolatey, egy megbízható, harmadik féltől származó csomagkezelő segítségével.\n\nA Chocolatey telepítve lesz a rendszerére, ha még nincs telepítve.\n\nSzeretné folytatni?",
+  "Dialog_Choco_DontAskAgain": "Ne kérdezze meg újra (mindig használja a Chocolatey-t tartalék megoldásként)",
+  "Progress_Choco_Installing": "A Chocolatey csomagkezelő telepítése…",
+  "Progress_Choco_Installed": "A Chocolatey sikeresen telepítve",
+  "Progress_Choco_InstallingPackage": "'{0}' telepítése a Chocolatey segítségével…",
+  "Progress_Choco_FallbackAttempt": "A WinGettel nem sikerült telepíteni, a(z) '{0}' telepítéséhez próbálja meg a Chocolatey-t…",
   "TechnicalDetails_Toggle": "Műszaki részletek",
   "TechnicalDetails_OpenRegedit": "Megnyitás a Beállításszerkesztőben",
   "TechnicalDetails_ToggleTooltip": "Technikai részletek váltása",
   "TechnicalDetails_On": "Műszaki részletek: Be",
   "TechnicalDetails_Off": "Műszaki részletek: Ki",
-  "Accessibility_NavigationLandmark": "Navigation",
-  "Accessibility_ToggleTechnicalDetails": "Toggle Technical Details",
-  "Accessibility_ImportInProgress": "Import in progress",
-  "Accessibility_TableView": "Table View",
-  "Accessibility_CardView": "Card View",
-  "Accessibility_ProgressUpdate": "Progress update",
-  "Accessibility_ToggleNavigation": "Toggle Navigation",
-  "Accessibility_ApplyingSetting": "Applying setting",
+  "Accessibility_NavigationLandmark": "Navigáció",
+  "Accessibility_ToggleTechnicalDetails": "Technikai részletek Be/Ki",
+  "Accessibility_ImportInProgress": "Importálás folyamatban",
+  "Accessibility_TableView": "Táblázat nézet",
+  "Accessibility_CardView": "Kártyanézet",
+  "Accessibility_ProgressUpdate": "Folyamatfrissítés",
+  "Accessibility_ToggleNavigation": "Navigáció Be/Ki",
+  "Accessibility_ApplyingSetting": "Beállítás alkalmazása",
   "Accessibility_Selected": "Kiválasztva",
   "Accessibility_Checked": "Bejelölve",
   "Accessibility_Unchecked": "Nincs bejelölve"
